[gd_scene load_steps=2 format=3]

[ext_resource type="Script" uid="uid://bxdydpv01tj8h" path="res://ui/entity_info_panel.gd" id="1_panel"]

[node name="EntityInfoPanel" type="PanelContainer"]
custom_minimum_size = Vector2(340, 400)
size_flags_horizontal = 3
mouse_filter = 1
script = ExtResource("1_panel")
panel_id = "entity_info"
draggable = true
collapsible = true
save_position = true
save_expanded_state = true

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="MainVBox" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="HeaderContainer" type="HBoxContainer" parent="MarginContainer/MainVBox"]
unique_name_in_owner = true
layout_mode = 2
mouse_default_cursor_shape = 9

[node name="CollapseButton" type="Button" parent="MarginContainer/MainVBox/HeaderContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(24, 24)
layout_mode = 2
tooltip_text = "Collapse/Expand Panel"
text = "▼"

[node name="TitleLabel" type="Label" parent="MarginContainer/MainVBox/HeaderContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 16
text = "Entity Info"
vertical_alignment = 1

[node name="CloseButton" type="Button" parent="MarginContainer/MainVBox/HeaderContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(24, 24)
layout_mode = 2
tooltip_text = "Close Panel"
text = "×"

[node name="ContentContainer" type="VBoxContainer" parent="MarginContainer/MainVBox"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 5

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/MainVBox/ContentContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 1
horizontal_scroll_mode = 0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/MainVBox/ContentContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 8

[node name="InfoContainer" type="VBoxContainer" parent="MarginContainer/MainVBox/ContentContainer/ScrollContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 5

[node name="AntSection" type="VBoxContainer" parent="MarginContainer/MainVBox/ContentContainer/ScrollContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 8

[node name="RoleLabel" type="Label" parent="MarginContainer/MainVBox/ContentContainer/ScrollContainer/VBoxContainer/AntSection"]
unique_name_in_owner = true
layout_mode = 2
text = "Role: Worker"

[node name="ColonyLabel" type="Label" parent="MarginContainer/MainVBox/ContentContainer/ScrollContainer/VBoxContainer/AntSection"]
unique_name_in_owner = true
layout_mode = 2
text = "Colony: Colony-1"

[node name="StatusSeparator" type="HSeparator" parent="MarginContainer/MainVBox/ContentContainer/ScrollContainer/VBoxContainer/AntSection"]
layout_mode = 2

[node name="StatusLabel" type="Label" parent="MarginContainer/MainVBox/ContentContainer/ScrollContainer/VBoxContainer/AntSection"]
layout_mode = 2
text = "Status"
horizontal_alignment = 1

[node name="HealthContainer" type="HBoxContainer" parent="MarginContainer/MainVBox/ContentContainer/ScrollContainer/VBoxContainer/AntSection"]
layout_mode = 2

[node name="HealthLabel" type="Label" parent="MarginContainer/MainVBox/ContentContainer/ScrollContainer/VBoxContainer/AntSection/HealthContainer"]
layout_mode = 2
text = "Health:"

[node name="HealthBar" type="ProgressBar" parent="MarginContainer/MainVBox/ContentContainer/ScrollContainer/VBoxContainer/AntSection/HealthContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 3
show_percentage = false

[node name="HealthValueLabel" type="Label" parent="MarginContainer/MainVBox/ContentContainer/ScrollContainer/VBoxContainer/AntSection/HealthContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "100/100"

[node name="EnergyContainer" type="HBoxContainer" parent="MarginContainer/MainVBox/ContentContainer/ScrollContainer/VBoxContainer/AntSection"]
layout_mode = 2

[node name="EnergyLabel" type="Label" parent="MarginContainer/MainVBox/ContentContainer/ScrollContainer/VBoxContainer/AntSection/EnergyContainer"]
layout_mode = 2
text = "Energy:"

[node name="EnergyBar" type="ProgressBar" parent="MarginContainer/MainVBox/ContentContainer/ScrollContainer/VBoxContainer/AntSection/EnergyContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 3
show_percentage = false

[node name="EnergyValueLabel" type="Label" parent="MarginContainer/MainVBox/ContentContainer/ScrollContainer/VBoxContainer/AntSection/EnergyContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "100/100"

[node name="FoodLabel" type="Label" parent="MarginContainer/MainVBox/ContentContainer/ScrollContainer/VBoxContainer/AntSection"]
unique_name_in_owner = true
layout_mode = 2
text = "Carrying Food: No"

[node name="ProfileSeparator" type="HSeparator" parent="MarginContainer/MainVBox/ContentContainer/ScrollContainer/VBoxContainer/AntSection"]
layout_mode = 2

[node name="ProfileSectionLabel" type="Label" parent="MarginContainer/MainVBox/ContentContainer/ScrollContainer/VBoxContainer/AntSection"]
layout_mode = 2
text = "Ant Profile"
horizontal_alignment = 1

[node name="AntProfileNameLabel" type="Label" parent="MarginContainer/MainVBox/ContentContainer/ScrollContainer/VBoxContainer/AntSection"]
unique_name_in_owner = true
layout_mode = 2
text = "Profile: Worker"

[node name="EditAntProfileButton" type="Button" parent="MarginContainer/MainVBox/ContentContainer/ScrollContainer/VBoxContainer/AntSection"]
unique_name_in_owner = true
layout_mode = 2
text = "Edit Ant Profile"

[node name="InfluenceSeparator" type="HSeparator" parent="MarginContainer/MainVBox/ContentContainer/ScrollContainer/VBoxContainer/AntSection"]
layout_mode = 2

[node name="MovementSectionLabel" type="Label" parent="MarginContainer/MainVBox/ContentContainer/ScrollContainer/VBoxContainer/AntSection"]
layout_mode = 2
text = "Movement Influences"
horizontal_alignment = 1

[node name="ActiveProfileLabel" type="Label" parent="MarginContainer/MainVBox/ContentContainer/ScrollContainer/VBoxContainer/AntSection"]
unique_name_in_owner = true
layout_mode = 2
text = "Active: Look For Food"

[node name="ViewInfluenceProfileButton" type="Button" parent="MarginContainer/MainVBox/ContentContainer/ScrollContainer/VBoxContainer/AntSection"]
unique_name_in_owner = true
layout_mode = 2
text = "View Influence Profile"

[node name="LegendSeparator" type="HSeparator" parent="MarginContainer/MainVBox/ContentContainer/ScrollContainer/VBoxContainer/AntSection"]
layout_mode = 2

[node name="LegendLabel" type="Label" parent="MarginContainer/MainVBox/ContentContainer/ScrollContainer/VBoxContainer/AntSection"]
layout_mode = 2
text = "Influence Legend"
horizontal_alignment = 1

[node name="InfluencesLegend" type="VBoxContainer" parent="MarginContainer/MainVBox/ContentContainer/ScrollContainer/VBoxContainer/AntSection"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 4

[node name="ColonySection" type="VBoxContainer" parent="MarginContainer/MainVBox/ContentContainer/ScrollContainer/VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
theme_override_constants/separation = 8

[node name="InfoContainer" type="VBoxContainer" parent="MarginContainer/MainVBox/ContentContainer/ScrollContainer/VBoxContainer/ColonySection"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="AntCountLabel" type="Label" parent="MarginContainer/MainVBox/ContentContainer/ScrollContainer/VBoxContainer/ColonySection/InfoContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Ants: 0 / 25"

[node name="FoodCollectedLabel" type="Label" parent="MarginContainer/MainVBox/ContentContainer/ScrollContainer/VBoxContainer/ColonySection/InfoContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Food Collected: 0.0 units"

[node name="RadiusLabel" type="Label" parent="MarginContainer/MainVBox/ContentContainer/ScrollContainer/VBoxContainer/ColonySection/InfoContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Radius: 50.0"

[node name="SpawnSeparator" type="HSeparator" parent="MarginContainer/MainVBox/ContentContainer/ScrollContainer/VBoxContainer/ColonySection"]
layout_mode = 2

[node name="SpawnLabel" type="Label" parent="MarginContainer/MainVBox/ContentContainer/ScrollContainer/VBoxContainer/ColonySection"]
layout_mode = 2
text = "Spawn Ants"
horizontal_alignment = 1

[node name="SpawnContainer" type="HBoxContainer" parent="MarginContainer/MainVBox/ContentContainer/ScrollContainer/VBoxContainer/ColonySection"]
layout_mode = 2

[node name="SpawnCountSpin" type="SpinBox" parent="MarginContainer/MainVBox/ContentContainer/ScrollContainer/VBoxContainer/ColonySection/SpawnContainer"]
unique_name_in_owner = true
layout_mode = 2
min_value = 1.0
max_value = 50.0
value = 5.0

[node name="ProfileOption" type="OptionButton" parent="MarginContainer/MainVBox/ContentContainer/ScrollContainer/VBoxContainer/ColonySection/SpawnContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="SpawnButton" type="Button" parent="MarginContainer/MainVBox/ContentContainer/ScrollContainer/VBoxContainer/ColonySection/SpawnContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Spawn"

[node name="SettingsSeparator" type="HSeparator" parent="MarginContainer/MainVBox/ContentContainer/ScrollContainer/VBoxContainer/ColonySection"]
layout_mode = 2

[node name="SettingsLabel" type="Label" parent="MarginContainer/MainVBox/ContentContainer/ScrollContainer/VBoxContainer/ColonySection"]
layout_mode = 2
text = "Colony Settings"
horizontal_alignment = 1

[node name="RadiusContainer" type="HBoxContainer" parent="MarginContainer/MainVBox/ContentContainer/ScrollContainer/VBoxContainer/ColonySection"]
layout_mode = 2

[node name="RadiusSettingLabel" type="Label" parent="MarginContainer/MainVBox/ContentContainer/ScrollContainer/VBoxContainer/ColonySection/RadiusContainer"]
layout_mode = 2
text = "Radius:"

[node name="RadiusSpin" type="SpinBox" parent="MarginContainer/MainVBox/ContentContainer/ScrollContainer/VBoxContainer/ColonySection/RadiusContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
min_value = 20.0
max_value = 200.0
value = 50.0

[node name="MaxAntsContainer" type="HBoxContainer" parent="MarginContainer/MainVBox/ContentContainer/ScrollContainer/VBoxContainer/ColonySection"]
layout_mode = 2

[node name="MaxAntsLabel" type="Label" parent="MarginContainer/MainVBox/ContentContainer/ScrollContainer/VBoxContainer/ColonySection/MaxAntsContainer"]
layout_mode = 2
text = "Max Ants:"

[node name="MaxAntsSpin" type="SpinBox" parent="MarginContainer/MainVBox/ContentContainer/ScrollContainer/VBoxContainer/ColonySection/MaxAntsContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
min_value = 1.0
max_value = 200.0
value = 25.0

[node name="SpawnRateContainer" type="HBoxContainer" parent="MarginContainer/MainVBox/ContentContainer/ScrollContainer/VBoxContainer/ColonySection"]
layout_mode = 2

[node name="SpawnRateLabel" type="Label" parent="MarginContainer/MainVBox/ContentContainer/ScrollContainer/VBoxContainer/ColonySection/SpawnRateContainer"]
layout_mode = 2
text = "Spawn Rate:"

[node name="SpawnRateSpin" type="SpinBox" parent="MarginContainer/MainVBox/ContentContainer/ScrollContainer/VBoxContainer/ColonySection/SpawnRateContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
min_value = 1.0
max_value = 60.0
step = 0.5
value = 5.0
suffix = "s"

[node name="ColorsSeparator" type="HSeparator" parent="MarginContainer/MainVBox/ContentContainer/ScrollContainer/VBoxContainer/ColonySection"]
layout_mode = 2

[node name="ColorsLabel" type="Label" parent="MarginContainer/MainVBox/ContentContainer/ScrollContainer/VBoxContainer/ColonySection"]
layout_mode = 2
text = "Colony Colors"
horizontal_alignment = 1

[node name="DirtColorContainer" type="HBoxContainer" parent="MarginContainer/MainVBox/ContentContainer/ScrollContainer/VBoxContainer/ColonySection"]
layout_mode = 2

[node name="DirtColorLabel" type="Label" parent="MarginContainer/MainVBox/ContentContainer/ScrollContainer/VBoxContainer/ColonySection/DirtColorContainer"]
layout_mode = 2
text = "Dirt Color:"

[node name="DirtColorPicker" type="ColorPickerButton" parent="MarginContainer/MainVBox/ContentContainer/ScrollContainer/VBoxContainer/ColonySection/DirtColorContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
color = Color(0.4, 0.2, 0.05, 1)

[node name="DarkerDirtContainer" type="HBoxContainer" parent="MarginContainer/MainVBox/ContentContainer/ScrollContainer/VBoxContainer/ColonySection"]
layout_mode = 2

[node name="DarkerDirtLabel" type="Label" parent="MarginContainer/MainVBox/ContentContainer/ScrollContainer/VBoxContainer/ColonySection/DarkerDirtContainer"]
layout_mode = 2
text = "Darker Dirt:"

[node name="DarkerDirtColorPicker" type="ColorPickerButton" parent="MarginContainer/MainVBox/ContentContainer/ScrollContainer/VBoxContainer/ColonySection/DarkerDirtContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
color = Color(0.3, 0.15, 0.03, 1)

[node name="AntProfilesSeparator" type="HSeparator" parent="MarginContainer/MainVBox/ContentContainer/ScrollContainer/VBoxContainer/ColonySection"]
layout_mode = 2

[node name="AntProfilesSectionLabel" type="Label" parent="MarginContainer/MainVBox/ContentContainer/ScrollContainer/VBoxContainer/ColonySection"]
layout_mode = 2
text = "Ant Profiles"
horizontal_alignment = 1

[node name="ColonyAntProfilesList" type="ItemList" parent="MarginContainer/MainVBox/ContentContainer/ScrollContainer/VBoxContainer/ColonySection"]
unique_name_in_owner = true
layout_mode = 2
custom_minimum_size = Vector2(0, 80)
auto_height = true
item_count = 1
item_0/text = "Worker (initial: 10)"

[node name="EditColonyAntProfileButton" type="Button" parent="MarginContainer/MainVBox/ContentContainer/ScrollContainer/VBoxContainer/ColonySection"]
unique_name_in_owner = true
layout_mode = 2
disabled = true
text = "Edit Selected Profile"

[node name="VisualizationSeparator" type="HSeparator" parent="MarginContainer/MainVBox/ContentContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="VisualizationLabel" type="Label" parent="MarginContainer/MainVBox/ContentContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "Visualization"
horizontal_alignment = 1

[node name="VisualizationContainer" type="VBoxContainer" parent="MarginContainer/MainVBox/ContentContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="ShowHeatmapCheck" type="CheckButton" parent="MarginContainer/MainVBox/ContentContainer/ScrollContainer/VBoxContainer/VisualizationContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Show Heatmap"

[node name="NavDebugCheck" type="CheckButton" parent="MarginContainer/MainVBox/ContentContainer/ScrollContainer/VBoxContainer/VisualizationContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Nav Debug"

[node name="HighlightCheck" type="CheckButton" parent="MarginContainer/MainVBox/ContentContainer/ScrollContainer/VBoxContainer/VisualizationContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Highlight Ants"

[node name="ShowInfluenceVectorsCheck" type="CheckButton" parent="MarginContainer/MainVBox/ContentContainer/ScrollContainer/VBoxContainer/VisualizationContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Show Influence Vectors"
